update of nvim configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Plugins
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Basic settings
 set -g mouse on
 set -s escape-time 0
@@ -20,3 +24,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+run '~/.conf/tmux/plugins/tpm/tpm'
