--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,8 +1,3 @@
 {
-    "languageserver": {
-        "sourcekit-lsp": {
-            "filetypes": ["swift"],
-            "command": "/Applications/Xcode-14.1.0.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/sourcekit-lsp"
-        }
-    }
+  "coc.preferences.extensionUpdateCheck": "daily"
 }
