feat: color scheme update

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,7 @@
 {
+    "clangd": {
+        "fallbackFlags": "/Users/castlelecs/.luaver/lua/5.1/include"
+    },
     "Lua": {
       "workspace": {
           "library": {
